Revert "Correction des bugs empêchant le bon fonctionnement de l'API"
