# authentification/swagger.yaml
@@ -12,16 +12,10 @@ paths:
       summary: Permet de connecter l'utilisateur
       description: Permet de connecter l'utilisateur et de récupérer le token de connexion
       parameters:
-        - name: username
+        - name: userName
           in: query
           description: Le nom d'utilisateur qui veut se connecter
           required: true
-          schema:
-            type: string
-
-        - name: email
-          in: query
-          description: L'email du compte dont on veut se connecter (option alternative)
           schema:
             type: string
 
@@ -42,9 +36,6 @@ paths:
                   token:
                     type: string
                     example: "t0k3n"
-        '400':
-          description: L'identifiant (ou l'email) ou le mot de passe est manquant
-        
         '401':
           description: Mauvais identifiants fournis
   /auth/sign_in:
@@ -75,6 +66,13 @@ paths:
           schema:
             type: string
 
+        - name: userName
+          in: query
+          description: Le nom d'utilisateur du nouveau utilisateur
+          required: true
+          schema:
+            type: string
+
         - name: password
           in: query
           description: Le mot de passe du nouveau utilisateur
@@ -82,87 +80,51 @@ paths:
           schema:
             type: string
 
-        - name: username
-          in: query
-          description: Le nom d'utilisateur du nouveau utilisateur
-          required: true
-          schema:
-            type: string
-            
-        - name: pseudo
-          in: query
-          description: Le pseudo du nouveau utilisateur
-          required: true
-          schema:
-            type: string
-
       responses:
         '200':
           description: OK L'utilisateur à été crée
-        '400':
-          description: Un des champs obligatoire est manquant
-        '409':
-          description: Le nom d'utilisateur ou l'email est déjà utilisé
+        '401':
+          description: Mauvais identifiants fournis
   
-  /users/{username}:
-    
+  /users/{userName}:
     get:
       tags:
       -  Gestion des utilisateurs
       summary: Permet de récupérer les informations d'un utilisateur
-      description: Permet de récupérer le pseudo et le nom d'utilisateur avec une requête sans token. <br> Si le token est présent, cela donne toutes les informations de l'utilisateur (sauf le mot de passe).
+      description: Permet de récupérer les informations d'un utilisateur à partir de son nom d'utilisateur
       parameters:
-        - name: username
+        - name: userName
           in: path
           description: Le nom d'utilisateur de l'utilisateur dont on veut
           required: true
           schema:
-            type: string
-            
-        - name: token
-          in: query
-          description: Le token pour avoir tous les informations sur l'utilisateur
-          schema:
-            type: string
-        
+            type: string  
   
       responses:
         '200':
-          description: L'utilisateur a été trouvé
+          description: OK L'utilisateur est crée
           content:
             application/json:
               schema:
                 type: object
                 properties:
-                  username:
+                  userName:
                     type: string
+                    example: "us3r"
                   lastName:
                     type: string
-                    nullable: true
+                    example: "Dupont"
                   firstName:
                     type: string
-                    nullable: true
+                    example: "Patrice"
                   email:
                     type: string
-                    nullable: true
+                    example: "email@example.com"
                   pseudo:
                     type: string
-              examples:
-                avecToken:
-                  summary: "Avec token"
-                  value:
-                    username: "us3r"
-                    lastName: "Dupont"
-                    firstName: "Patrice"
-                    email: "email@example.com"
-                    pseudo: "us3rl3thug"
-                sansToken:
-                  summary: "Sans token"
-                  value:
-                    username: "us3r"
-                    pseudo: "us3rl3thug"
-        '403':
-          description: Accès avec un token non autorisé
+                    example: "us3rl3thug"
+        '401':
+          description: Token non valide
         '404':
           description: L'utilisateur n'existe pas
 
@@ -174,7 +136,7 @@ paths:
       summary: Permet de supprimer un utilisateur
       description: Permet de supprimer un utilisateur à partir de son nom d'utilisateur
       parameters:
-        - name: username
+        - name: userName
           in: path
           description: Le nom d'utilisateur de l'utilisateur dont on veut
           required: true
@@ -191,9 +153,8 @@ paths:
       responses:
         '200': 
           description: OK L'utilisateur est supprimé
-
-        '403':
-          description: Accès avec un token non autorisé
+        '401':
+          description: Token non valide
         '404':
           description: L'utilisateur n'existe pas
         '500':
@@ -206,7 +167,7 @@ paths:
       summary: Permet de modifier les informations d'un utilisateur
       description: Permet de modifier les informations d'un utilisateur à partir de son nom d'utilisateur
       parameters:
-        - name: username
+        - name: userName
           in: path
           description: Le nom d'utilisateur de l'utilisateur dont on veut
           required: true
@@ -231,7 +192,7 @@ paths:
           schema:
             type: string
 
-        - name: username
+        - name: userName
           in: query
           description: Le nom d'utilisateur du nouveau utilisateur
           schema:
@@ -253,9 +214,11 @@ paths:
       responses:
         '200': 
           description: OK L'utilisateur est supprimé
-        '403':
-          description: Accès avec un token non autorisé
+        '401':
+          description: Token non valide
         '404':
           description: L'utilisateur n'existe pas
         '500':
           description: Erreur interne au serveur
+
+    
